hphp/hack/test/typecheck/dynamic_calls/dynamic_static_method.php.exp
File "dynamic_static_method.php", line 10, characters 19-20:
No static method `$f` in `WilfredDemo2` (Typing[4090])
  File "dynamic_static_method.php", line 6, characters 26-48:
  Did you mean `accessMethodDynamically` instead?
  File "dynamic_static_method.php", line 3, characters 13-24:
  Declaration of `WilfredDemo2` is here
